--- a/Aehopark/Info.plist
+++ b/Aehopark/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>KAKAO_NATIVE_APP_KEY</key>
 	<string>4a070b9b4ed120684489804a3bd20c36</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+    </dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Medium.ttf</string>
