[FEAT] picker 기능 추가

--- a/Aehopark/Info.plist
+++ b/Aehopark/Info.plist
@@ -4,10 +4,11 @@
 <dict>
 	<key>KAKAO_NATIVE_APP_KEY</key>
 	<string>4a070b9b4ed120684489804a3bd20c36</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key><true/>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Medium.ttf</string>
